--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="project-card">
         <h3>Multilingual Healthcare Information System for Cataract Patients</h3>
         <p>Design and development of a multilingual system providing healthcare information specifically for cataract patients in ophthalmology.</p>
-      <a href="https://github.com/SIDRAMAPPA773/Minor-Project-SDM-Medical.git" >View Project</a>
+      <a href="https://sidramappa773.github.io/Minor-Project-SDM-Medical/" >View Project</a>
       </div>
     </div>
   </section>
